--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "@testing-library/jest-dom": "^6.4.2",
     "bootstrap": "^5.3.2",
+    "dotenv": "^16.4.1",
+    "firebase": "^10.8.0",
     "jest-environment-jsdom": "^29.7.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.0",
